# grok-battle

./: .env  README.md  pyproject.toml  requirements.txt
app/: main.py
app/services/: grok_service.py
app/static/css/: style.css
app/static/js/: game.js
app/templates/: index.html
